@@ -1,0 +1,10 @@
+Title: Fixed broken "Global settings" when having the Event Console disabled via "omd config"
+Level: 1
+Component: wato
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i3p1
+Date: 1482313552
+
+
