@@ -15,6 +15,9 @@
     * 4144 FIX: Sidebar: Bottom of last snapin was not 100% visible
     * 4145 FIX: Fixed exception when setting output_format in wrong case
 
+    WATO:
+    * 4146 FIX: Fixed broken "Global settings" when having the Event Console disabled via "omd config"
+
     Notifications:
     * 4197 FIX: Fix sending notification to global fallback email address
 
